--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     </section>
   </header>
   
-  <hr>
+  <!-- <hr> -->
 
   <!-- Sezione About -->
   <section class="page-section" id="about">
@@ -90,9 +90,10 @@
       <div class="row">
         <div class="col-md-2 text center"></div>
         <div class="col-md-8">
-          <p class="testi">Chiocciole sonore è la realtà nata per unire tutte le cose in cui crediamo in un unico posto dove trovano spazio il benessere della persona, l’ascolto, la musica, i suoni, l’ascolto e la narrazione. <br>
-          Partendo dagli interventi in gravidanza, accompagnando lo sviluppo evolutivo del bambino, sostenendo la genitorialità, usiamo la narrazione e la musica dal vivo per far sperimentare a bambini e genitori emozioni e ascolto.<br>
-          </p>          
+          <p class="testi">
+            Siamo Chiara e Graziella e <b>Chiocciole sonore </b> è la realtà nata per unire tutte le cose in cui crediamo in un unico posto dove trovano spazio il benessere della persona, l’ascolto, la musica, i suoni, l’ascolto e la narrazione. </p>
+            <p class="testi">La nostra metodologia è il risultato della fusione di diverse competenze ed esperienze acquisite negli anni, attraverso studi specifici e ricerca personale, in continua evoluzione, sia nel campo della didattica musicale, sia nell’ambito musicoterapico.</p>
+            <p class="testi">Partiamo dagli interventi in gravidanza, accompagniamo lo sviluppo evolutivo del bambino, sosteniamo la genitorialità, usiamo la narrazione e la musica dal vivo per far sperimentare a bambini e genitori emozioni e ascolto.</p>
         </div>
         <div class="col-md-2"></div>
       </div>
