--- a/ascoltarecrescere.html
+++ b/ascoltarecrescere.html
@@ -72,23 +72,20 @@
             </div>
         </section>
     </header>
-    <hr>
+    <!-- <hr> -->
     <section class="page-section" id="ascoltocrescere">
 
         <div class="container">
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
+                    <p class="testi"><h3 class="section-heading" >Laboratori di suoni, musica e movimento.</h3></p>
                     <p class="testi">
-                        Laboratori di suoni, musica e movimento.<br>
-                        <br> 
-                        Il laboratorio per piccoli e piccolissimi punta a  sviluppare le naturali potenzialità innate del bambino, fin dalla più tenera età. 
-                        Tutto parte dall’ascolto, che  verrà usato come canale preferenziale con il bambino  per instaurare una comunicazione musicale. 
-                        Attraverso  il movimento spontaneo e la voce, la musica si avvicina  ai più piccoli rispettandone i tempi di apprendimento.<br>
-                        <br> 
-                        Un percorso rivolto ai bambini di età 0-6 anni ma pensato per le famiglie, che desiderano donare armonia ed equilibrio ai propri figli durante le delicate fasi di crescita e soprattutto nei primi anni.<br>
-                        CTA: scrivi per prenotare il tuo laboratorio.                        
-                    </p>
+                    Il laboratorio per piccoli e piccolissimi punta a  sviluppare le naturali potenzialità innate del bambino,  fin dalla più tenera età.<br> 
+                    Tutto parte dall’ascolto, che  verrà usato come canale preferenziale con il bambino  per instaurare una comunicazione musicale. <br>
+                    Attraverso  il movimento spontaneo e la voce, la musica si avvicina  ai più piccoli rispettandone i tempi di apprendimento.  </p> 
+                    <p class="testi">Un percorso rivolto ai bambini di età 0-6 anni ma pensato per le famiglie, che desiderano donare armonia ed equilibrio ai propri figli durante le delicate fasi di crescita e soprattutto nei primi anni.</p>
+                    <p class="testi">CTA: Inizia questo splendido percorso. Scrivici!</p>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -96,7 +93,7 @@
     </section>
 
 
-    <hr>
+<hr>
     <section class="footer" id="footer">
         <div class="container">
             <div class="row">
