--- a/ascolto.html
+++ b/ascolto.html
@@ -73,19 +73,19 @@
     </section>
   </header>
 
-<hr>
+<!-- <hr> -->
   <section class="page-section" id="ascolto">
     <div class="container">
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <h3 class="section-heading"> Ascolta chi sei</h3>
+          <p class="testi"> <h3 class="section-heading"> Ascolta chi sei</h3></p>
           <p class="testi">La mindfulness è una tecnica che si basa sulla pratica dell’attenzione
             consapevole, utile per ridurre lo stress e la sofferenza psicologica, per
             migliorare la comunicazione, aumentare l’attenzione e facilitare le
             relazioni d’aiuto.</p>
-          <p class="testi">“Mindfulness è portare l’attenzione al momento presente, momento per
-            momento, intenzionalmente e senza giudicare”
+          <p class="testi"><i>“Mindfulness è portare l’attenzione al momento presente, momento per
+            momento, intenzionalmente e senza giudicare”</i><br>
             J. Kabat Zinn</p>
           <p class="testi">È una pratica che <b>incoraggia la consapevolezza di sé </b>: di quello che si
             dice, del modo in cui lo si dice, di come ci si sente e si reae,
@@ -95,15 +95,8 @@
             prontamente il sorgere di pensieri negativi che ci provocano malessere.</p>
           <p class="testi">Una delle più belle conseguenze di un lavoro con la mindfulness è
             <b>l’ascolto consapevole </b>. In primis sul respiro, poi sui pensieri, sulle
-            parole, sui sentimenti e infine sulle azioni.
-          </p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <h3 class="section-heading">Mettiamo insieme l’ascolto e la mindfulness</h3>
+            parole, sui sentimenti e infine sulle azioni. </p>
+          <p class="testi"><h3 class="section-heading">Mettiamo insieme l’ascolto e la mindfulness</h3></p>
           <p class="testi">Ho pensato quindi di usare la mindfulness e le tecniche di ascolto per
             aiutare le persone a <b>ridurre lo stress</b> nella vita di tutti i giorni e
             duplicare gli effetti positivi.</p>
@@ -115,13 +108,7 @@
           <p class="testi">Detto così potrebbe sembrare molto complicato: in verità è molto
             semplice da mettere in azione, e richiede poco tempo per la pratica
             giornaliera.</p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <h3 class="section-heading">Ascolto e mindfulness per bambini</h3>
+          <p class="testi"><h3 class="section-heading">Ascolto e mindfulness per bambini</h3></p>
           <p class="testi">Anche i bambini possono allenarsi a riconoscere meglio le proprie
             emozioni e a migliorare la capacità di ascoltare ed essere presenti. I
             bambini, quando rivolgono l’attenzione verso di loro <b>scoprono le
@@ -151,27 +138,22 @@
             formate alla mindfulness e con esperienza nell’ambito dell’infanzia,
             anche i piccoli possano trarre beneficio dall’allenarsi all’essere presenti
             e dall’osservazione delle proprie esperienze.</p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <h3 class="section-heading">Tempi</h3>
-          <p class="testi">Ascolto e mindfulness è un percorso che si svolge in gruppo, una volta a
-            settimana, per 8 settimane che è il tempo necessario per completare il
-            protocollo.</p>
-          <p class="testi">CTA: Riduci lo stress, prendi consapevolezza del momento presente,
-            ascoltati. Scrivimi per prenotare la tua prima seduta. Vuoi prenotare
-            una seduta per il tuo bambino? Scrivimelo qui!</p>
+          <p class="testi"><h3 class="section-heading">Tempi</h3></p>
+            <p class="testi">Ascolto e mindfulness è un percorso che si svolge in gruppo, una volta a
+              settimana, per 8 settimane che è il tempo necessario per completare il
+              protocollo.</p>
+            <p class="testi">CTA: Riduci lo stress, prendi consapevolezza del momento presente,
+              ascoltati. Scrivimi per prenotare la tua prima seduta. Vuoi prenotare
+              una seduta per il tuo bambino? Scrivimelo qui!</p>
+
         </div>
         <div class="col-md-2"></div>
       </div>
     </div>
   </section>
 
-  <hr>
-  <section class="footer" id="footer">
+ <hr>
+   <section class="footer" id="footer">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
