--- a/grembosonoro.html
+++ b/grembosonoro.html
@@ -72,7 +72,7 @@
       </div>
     </section>
   </header>
-  <hr>
+  <!-- <hr> -->
   <section class="page-section" id="grembosonoro">
     <div class="container">
       <div class="row">
@@ -91,67 +91,55 @@
             precoce al benessere di tuo figlio. Per te che hai disturbi del sonno, mal
             di schiena, cattivo umore; per te che vuoi concederti un momento di
             coccola, condividere emozioni, imparare.</p>
+            <h3 class="section-heading">Cos’è e come funziona <i>Grembo Sonoro</i></h3>
+            <p class="testi">Grembo Sonoro è un percorso individuale o di gruppo che si fonda sul
+              Metodo Tomatis.</p>
+            <p class="testi">Tramite cuffie speciali, ti guido all'ascolto di Mozart e di Canti
+              Gregoriani. Ti muovi e partecipi alle sedute con la voce e con il canto.</p>
+            <p class="testi">Alla fine delle sedute <b>migliorerai la tua postura, la qualità del sonno e
+                dell'umore, diminuirà l'ansia.</b> Fiduciosa, serena, carica di energia
+              affronterai la gravidanza e il parto con gioia e positività. Il bambino si
+              aprirà al mondo con il desiderio di esplorarlo e di comunicare.</p>
+              <h3 class="section-heading">I benefici di questo percorso</h3>
+              <p class="testi">Gli effetti positivi dell’ascolto sulla donna in attesa riguardano molti
+                aspetti, in particolare:</p>
+                <p> 
+                  <ul class="benefici">
+                    <li>L’umore (sbalzi, irritabilità, malinconia)</li>
+                      <li>Il sonno (incubi, risvegli frequenti, incapacità ad addormentarsi)</li>
+                      <li>Il sistema gastrointestinale (senso di peso, nausea, bruciori)</li>
+                      <li>Il sistema cardiovascolare (palpitazioni, lipotimie)</li>
+                      <li>L’apparato respiratorio (senso di soffocamento, affanno)</li>
+                      <li>La postura (lombosciatalgie, lombalgie)</li>
+                      <li>Le funzioni intellettive (concentrazione, memoria)</li>
+                    </ul>
+                </p>
+              <p class="testi"><b>Distesa e rilassata</b> diventerai più pronta a percepire il tuo bambino
+                rendendo la vostra relazione più salda.</p>
+              <p class="testi">La tua ansia piano piano si allevierà favorendo il rilassamento e la voglia
+                di comunicare del bimbo nel tuo grembo. L’ascolto carica
+                energicamente, ti permette di avere più forze durante e dopo il parto.</p>
+              <p class="testi"><b>Trasmetti la tua serenità al tuo bambino</b> sia in utero che una volta
+                nato: questo tuo stato d’animo incoraggerà in lui o in lei la gioia, la
+                voglia di crescere, di esplorare l’ambiente.</p>
+                <h3 class="section-heading">Tempi</h3>
+              <p class="testi">Quando inizia il corso propongo un colloquio individuale e in alcuni casi
+                un test d’ascolto.</p>
+              <p class="testi">Le sedute sono individuali o per gruppi di 4/6 donne a partire dal 5°
+                mese di gestazione. Ci incontriamo 1 volta a settimana.</p>
+              <p class="testi">CTA: Inizia questo splendido percorso a due con la tua creatura.</p>
         </div>
         <div class="col-md-2"></div>
       </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <h3 class="section-heading">Cos’è e come funziona Grembo Sonoro</h3>
-          <p class="testi">Grembo Sonoro è un percorso individuale o di gruppo che si fonda sul
-            Metodo Tomatis.</p>
-          <p class="testi">Tramite cuffie speciali, ti guido all'ascolto di Mozart e di Canti
-            Gregoriani. Ti muovi e partecipi alle sedute con la voce e con il canto.</p>
-          <p class="testi">Alla fine delle sedute <b>migliorerai la tua postura, la qualità del sonno e
-              dell'umore, diminuirà l'ansia.</b> Fiduciosa, serena, carica di energia
-            affronterai la gravidanza e il parto con gioia e positività. Il bambino si
-            aprirà al mondo con il desiderio di esplorarlo e di comunicare.</p>
         </div>
         <div class="col-md-2"></div>
       </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <h3 class="section-heading">I benefici di questo percorso</h3>
-          <p class="testi">Gli effetti positivi dell’ascolto sulla donna in attesa riguardano molti
-            aspetti, in particolare:</p>
-          <ul class="benefici">
-            <li>L’umore (sbalzi, irritabilità, malinconia)</li>
-            <li>Il sonno (incubi, risvegli frequenti, incapacità ad addormentarsi)</li>
-            <li>Il sistema gastrointestinale (senso di peso, nausea, bruciori)</li>
-            <li>Il sistema cardiovascolare (palpitazioni, lipotimie)</li>
-            <li>L’apparato respiratorio (senso di soffocamento, affanno)</li>
-            <li>La postura (lombosciatalgie, lombalgie)</li>
-            <li>Le funzioni intellettive (concentrazione, memoria)</li>
-          </ul>
-          <p class="testi"><b>Distesa e rilassata</b> diventerai più pronta a percepire il tuo bambino
-            rendendo la vostra relazione più salda.</p>
-          <p class="testi">La tua ansia piano piano si allevierà favorendo il rilassamento e la voglia
-            di comunicare del bimbo nel tuo grembo. L’ascolto carica
-            energicamente, ti permette di avere più forze durante e dopo il parto.</p>
-          <p class="testi"><b>Trasmetti la tua serenità al tuo bambino</b> sia in utero che una volta
-            nato: questo tuo stato d’animo incoraggerà in lui o in lei la gioia, la
-            voglia di crescere, di esplorare l’ambiente.</p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <h3 class="section-heading">Tempi</h3>
-          <p class="testi">Quando inizia il corso propongo un colloquio individuale e in alcuni casi
-            un test d’ascolto.</p>
-          <p class="testi">Le sedute sono individuali o per gruppi di 4/6 donne a partire dal 5°
-            mese di gestazione. Ci incontriamo 1 volta a settimana.</p>
-          <p class="testi">CTA: Inizia questo splendido percorso a due con la tua creatura.</p>
-        </div>
-        <div class="col-md-2"></div>
-      </div>
+
     </div>
   </section>
 
 
-  <hr>
+<hr>
   <section class="footer" id="footer">
     <div class="container">
       <div class="row">
