--- a/incantabimbi.html
+++ b/incantabimbi.html
@@ -61,14 +61,14 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-heading center">InCantabimbi</h2>
+                    <h2 class="section-heading center">Chiara e InCantabimbi</h2>
                     <h2 class="section-heading text-uppercase center"></h2>
                 </div>
             </div>
         </div>
     </section>
 </header>
-<hr>
+<!-- <hr> -->
 
 <section class="page-section" id="bimbincanto">
 
@@ -76,23 +76,17 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <p class="testi">
-                    <p class="section-heading"><b>PRESENTAZIONE:</b></p><br>
-                    Il gruppo InCantabimbi nasce dall’incontro tra musica, didattica, pedagogia, ricerca scientifica dedicata alla prima infanzia ed ha come obiettivo lo sviluppo globale e la crescita gioiosa dei bambini attraverso l’ascolto e la pratica musicale. <br>
-                    Le componenti del gruppo sono cinque e sono musiciste professioniste polistrumentiste,  cantanti di diversi stili e generi musicali, specializzate nell’ educazione musicale per la prima infanzia. La peculiarità del gruppo sta nell’elaborare e restituire, secondo le esigenze evolutive dei bambini, un progetto finale duttile ed adattabile al pubblico e agli spazi.<br>
-                    Durante il concerto interattivo i bambini ascolteranno differenti possibilità sonore e timbriche degli strumenti musicali, canteranno con le musiciste ed i loro genitori, apprendendo diversi stili, generi e modi musicali.<br>
-                    Attraverso la contestualizzazione narrativa il bambino diventa protagonista dello spettacolo, contribuendo attivamente allo svolgimento dell’azione musicale. Il concerto diviene quindi un evento musicale dalla natura multiforme: da performance a momento didattico attraverso l’interazione e la condivisione creativa <br>
-                    <br>               
-                    <p class="section-heading"><b>MODALIT&#193; DI ATTUAZIONE:</b></p><br>
-                    Fino ad ora abbiamo pensato, progettato creato e messo in scena:<br>
-                    &#8220;Il Flauto Magico e una valigia piena di sogni&#8221; liberamente ispirato alle musiche de &#8220;Il Flauto Magico&#8221; W.A Mozart<br>
-                    &#8220;Il mio primo Barbiere&#8221; liberamente ispirato alle musiche del Barbiere di Siviglia di G. Rossini<br>
-                    &#8220;Il mio primo Elisir&#8221; liberamente ispirato alle musiche de &#8220;L’Elisir d’amore&#8221; di G.Donizetti<br>
-                    &#8220;DanteBiberon&#8221; ispirato alla Divina Commedia di Dante con musiche tratte dal repertorio classico, jazz e popolare.<br>
-                    I piccoli e i grandi spettatori saranno trasportati e accompagnati tra le note delle arie e melodie di una delle più famose opere dell’opera musicale italiana.<br>
-                    Il fondamento didattico che accomuna tutte le proposte musicali ha le sue radici nella teoria dell’apprendimento musicale di E. Gordon, specifica per la prima infanzia.<br>
-                    Il pubblico sarà coinvolto ed invitato a partecipare con attività di ascolto, movimento, canto, intonazione di pattern melodici e ritmici. </p>
-
+              <p class="testi"><h3 class="section-heading">Chiara e Graziella insieme con NATI PER LA MUSICA</h3></p>
+              <p class="testi">Nati per la Musica promuove l'esperienza musicale in famiglia come strumento di relazione, già durante la gravidanza, per uno sviluppo migliore del bambino nelle prime epoche della vita.</p>
+              <p class="testi">Il Programma è promosso dall'Associazione Culturale Pediatri e dal Centro per la Salute del Bambino ed è attivo su tutto il territorio nazionale grazie alle reti regionali di operatori, che coordinano e promuovono diverse iniziative locali per bambini in età prescolare e le loro famiglie.</p>
+              <p class="testi"><h3 class="section-heading">La musica fa bene</h3></p>
+              <p class="testi">Le ricerche scientifiche dimostrano che le esperienze nei primi anni di vita sono fondamentali per un ottimale sviluppo complessivo delle bambine e dei bambini. La musica è una buona pratica che, se attuata precocemente e con continuità, sostiene la crescita dei bambini.</p>
+              <p class="testi">Dal punto di vista cognitivo, la musica aiuta il bambino a sviluppare proprie capacità di ascolto e osservazione, ad accrescere la propria immaginazione e creatività, ad aumentare le capacità di concentrazione e attenzione e ad esercitare la memoria.</p>
+              <p class="testi">A livello relazionale ascoltare e fare musica in famiglia, giocando con la voce, con gli oggetti quotidiani che producono suoni, cantare filastrocche e inventarne di nuove rafforza il legame affettivo tra adulto e bambino ed è fonte di benessere.</p>
+              <p class="testi"><h3 class="section-heading">Fare musica, insieme</h3></p>
+              <p class="testi">Il ruolo dei genitori è cruciale nel percorso di avvicinamento e scoperta della musica e dei suoni.</p>
+              <p class="testi">Un ambiente familiare musicalmente stimolante, dove i genitori propongono ai bambini di giocare con la voce e con i suoni, rafforza il legame affettivo all’interno della famiglia ed è terreno favorevole nel quale si possono sviluppare le esperienze musicali successive.</p>
+              <p class="testi">I <b>laboratori accreditati</b> da nati per la Musica sono: Ascoltare per crescere, Grembo sonoro e Storie di suoni.</p>
             </div>
             <div class="col-md-2"></div>
         </div>
@@ -100,8 +94,8 @@
 </section>
 
 
-  <hr>
-  <section class="footer" id ="footer">
+ <hr>
+ <section class="footer" id ="footer">
     <div class="container">
      <div class="row">
       <div class="col-md-4">
