--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     </div>
   </nav>
 
-  <!-- Header-->
   <header class="">
     <section class="page-section" id="intestazione">
       <div class="container">
@@ -70,7 +69,7 @@
         </div>
       </div>
     </section>
-  </header>
+  </header> 
 
  <!-- <hr>-->
 
@@ -80,22 +79,24 @@
         <div class="col-md-2 testi"></div>
         <div class="col-md-8 testi">
           <p class="testi">
-            Siamo Chiara e Graziella, due professioniste in ascolto della vita che parla .<br>
+            Siamo Chiara e Graziella, due professioniste in ascolto della vita che parla .</p>
+            <p class="testi">
             Passione, creatività e organizzazione sono le caratteristiche che più ci
-            legano. <br>
+            legano.<br>
             Ci occupiamo di educazione musicale, musicoterapia e formazione
             creando dei percorsi che ti aiutano a vivere la musica in modo pratico,
-            creativo e consapevole.<br>
-            <br>
+            creativo e consapevole.</p>
+            <p class="testi">
             Offriamo delle possibilità non convenzionali di rieducazione e di
-            benessere alle persone che chiedono sostegno per la loro crescita.<br>
+            benessere alle persone che chiedono sostegno per la loro crescita.</p>
+            <p class="testi">
             Perché non convenzionali? Perché usiamo <b>la musica, l’ascolto e le
             potenzialità del nostro orecchio</b> per sviluppare una vita più serena e
-            ricca di possibilità.<br>
-            <br>
-            Possiamo aiutare anche te: conosciamoci meglio (<a href="about.html">chi siamo)</a>,
-            i nostri progetti <a href="natiperlamusica.html">Nati per la Musica</a>), metodica
-            <a href="">Tomatis</a> e <a href="bimbincanto.html">Incantabimbi.</a> 
+            ricca di possibilità.</p>
+            <p class="testi">
+            Possiamo aiutare anche te: conosciamoci meglio (<a href="about.html">Chi siamo</a>),
+            i nostri progetti (<a href="natiperlamusica.html">Nati per la Musica</a>), 
+            <a href="metodotomatis.html">metodica Tomatis</a> e <a href="bimbincanto.html">Incantabimbi.</a> </p>
           </p>
         </div>
         <div class="col-md-2 testi"></div>
