--- a/storiesuoni.html
+++ b/storiesuoni.html
@@ -74,7 +74,7 @@
     </section>
   </header>
 
-  <hr>
+  <!-- <hr> -->
   <section class="page-section" id="storiesuoni">
     <div class="container">
       <div class="row">
@@ -103,7 +103,7 @@
             di eventi sonori.</p>
           <p class="testi">È per bambini dai 2 ai 6 anni e per le loro famiglie che si ritagliano un
             momento per stare insieme e giocare. È un viaggio attraverso cui il
-            divertimento, l'esplorazione musicale e il movimento prenderanno
+            divertimento, <b>l'esplorazione musicale e il movimento</b> prenderanno
             parte al processo evolutivo in una dimensione creativa e di ascolto.</p>
           <p class="testi">Bastano una storia e degli oggetti semplici per catturare
             immediatamente l’attenzione dei piccoli.</p>
