--- a/tomatisbambini.html
+++ b/tomatisbambini.html
@@ -54,7 +54,6 @@
 
 
   <!-- Header-->
-  <!-- Header-->
   <header class="">
     <section class="page-section" id="intestazione">
       <div class="container">
@@ -71,7 +70,7 @@
 </section>
 </header>
 
-<hr>
+<!-- <hr> -->
 
 
   <!--Sezione tomatis e i bambini-->
@@ -80,39 +79,22 @@
     <div class="row">
      <div class="col-md-2"></div>
      <div class="col-md-8"><h3 class="section-heading">Dirige le orecchie... il maestro Wolfgang Amadeus Mozart</h3>
-      <p class="testi">Ascoltare non è solo udire ma ricevere un messaggio, elaborarlo,
-       integrarlo e dare una risposta adeguata.</p>
-      <p class="testi">Forse non lo sai ma dal nostro ascolto dipende la capacità di attenzione,
-       l’efficacia con cui trattiamo un’informazione, la nostra postura, la voglia
-       di apprendere e di comunicare.</p>
-      <p class="testi">La metodica Tomatis (link metodo) è una tecnica di stimolazione sonora
-       che serve a migliorare la qualità di ricezione dell’orecchio.</p>
-      <p class="testi">Ho pensato di applicare questo metodo ai bambini per aiutarli nelle
-       problematiche legate all’apprendimento, ai <b>disturbi dell’attenzione</b> , alla
-       difficoltà di memorizzazione.</p>
+      <p class="testi">Ascoltare non è solo udire ma ricevere un messaggio, elaborarlo, integrarlo e dare una risposta adeguata.</p>
+      <p class="testi">Forse non lo sai ma dal nostro ascolto dipende la capacità di attenzione, l’efficacia con cui trattiamo un’informazione, la nostra postura, la voglia di apprendere e di comunicare.</p>
+      <p class="testi">La <a href="metodotomatis.html">metodica Tomatis</a> è una tecnica di stimolazione sonora che serve a migliorare la qualità di ricezione dell’orecchio.</p>
+      <p class="testi">Ho pensato di applicare questo metodo ai bambini per aiutarli nelle problematiche legate all’apprendimento, ai <b>disturbi dell’attenzione</b>, alla difficoltà di memorizzazione.</p>
      </div>
      <div class="col-md-2"></div>
     </div>
     <div class="row">
      <div class="col-md-2"></div>
-     <div class="col-md-8"><h3 class="section-heading"> Cos’è Tomatis per bambini</h3>
-      <p class="testi">Un percorso rivolto ai bambini di età 0-6 anni ma pensato per le
-       famiglie, in particolare per le mamme che desiderano <b>donare armonia
-       ed equilibrio ai propri figli</b> durante le delicate fasi di crescita e
-       soprattutto nei primi anni.</p>
-      <p class="testi">Si tratta nella pratica di un trattamento speciale della musica di Mozart
-       e della musica vocale a più voci attraverso uno strumento inventato da
-       Tomatis che si chiama Orecchio Elettronico: un modo utile e testato
-       per armonizzare gli aspetti del bambino necessari per una crescita e un
-       apprendimento sereno a livello psicomotorio, emotivo, linguistico e
-       attentivo.</p>
-      <p class="testi">Il bambino non deve fare nessun sforzo: si dedicherà durante il nostro
-       tempo insieme ad attività piacevoli, creative e naturalmente all’ascolto.</p>
-      <p class="testi">Potresti chiederti: “Ma funziona?”</p>
-      <p class="testi">Rispondo sempre ai genitori che c’è bisogno di tempo per far
-       sedimentare. Come tutti i trattamenti, <b>i risultati sono visibili se
-       l’impegno è familiare </b>, se si considera questo trattamento come un
-       percorso sistemico che si fa insieme.</p>
+     <div class="col-md-8"><h3 class="section-heading"> Cos’è <i>Tomatis</i> per bambini</h3>
+      <p class="testi">Un percorso rivolto ai bambini di età 0-6 anni ma pensato per le famiglie, in particolare per le mamme che desiderano <b>donare armonia ed equilibrio ai propri figli</b> durante le delicate fasi di crescita e soprattutto nei primi anni.</p>
+      <p class="testi">Si tratta nella pratica di un trattamento speciale della musica di Mozart e della musica vocale a più voci attraverso uno strumento inventato da Tomatis che si chiama Orecchio Elettronico: un modo utile e testato per armonizzare gli aspetti del bambino necessari per una crescita e un apprendimento sereno a livello psicomotorio, emotivo, linguistico e attentivo.</p>
+      <p class="testi">Il bambino non deve fare nessun sforzo: si dedicherà durante il nostro tempo insieme ad attività piacevoli, creative e naturalmente all’ascolto.</p>
+      <p class="testi">Potresti chiederti: “Ma funziona?” <br>Rispondo sempre ai genitori che c’è bisogno di tempo per far sedimentare. Come tutti i trattamenti, <b>i risultati sono visibili se
+      l’impegno è familiare </b>, se si considera questo trattamento come un percorso sistemico che si fa insieme.</p>
+      </p>
      </div>
      <div class="col-md-2"></div>
     </div>
