Aggiornamento testo incantabimni, formattazione ul

--- a/grembosonoro.html
+++ b/grembosonoro.html
@@ -104,8 +104,8 @@
               <p class="testi">Gli effetti positivi dell’ascolto sulla donna in attesa riguardano molti
                 aspetti, in particolare:</p>
                 <p> 
-                  <ul class="benefici">
-                    <li>L’umore (sbalzi, irritabilità, malinconia)</li>
+                  <ul class="benefici testi">
+                      <li>L’umore (sbalzi, irritabilità, malinconia)</li>
                       <li>Il sonno (incubi, risvegli frequenti, incapacità ad addormentarsi)</li>
                       <li>Il sistema gastrointestinale (senso di peso, nausea, bruciori)</li>
                       <li>Il sistema cardiovascolare (palpitazioni, lipotimie)</li>
