--- a/natiperlamusica.html
+++ b/natiperlamusica.html
@@ -91,7 +91,7 @@
                 </p>
                 <p class="testi">Il ruolo dei genitori è cruciale nel percorso di avvicinamento e scoperta della musica e dei suoni.</p>
                 <p class="testi">Un ambiente familiare musicalmente stimolante, dove i genitori propongono ai bambini di giocare con la voce e con i suoni, rafforza il legame affettivo all’interno della famiglia ed è terreno favorevole nel quale si possono sviluppare le esperienze musicali successive.<br>
-                  I <b>Laboratori accreditati da nati per la Musica</b>: per crescere, Grembo sonoro e Storie di suoni.</p>
+                  I <b>Laboratori accreditati da nati per la Musica</b>: Ascoltare per crescere, Grembo sonoro e Storie di suoni.</p>
             </div>
             <div class="col-md-2"></div>
         </div>
