--- a/incantabimbi.html
+++ b/incantabimbi.html
@@ -61,7 +61,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-heading center">Chiara e InCantabimbi</h2>
+                    <h2 class="section-heading center">InCantabimbi</h2>
                     <h2 class="section-heading text-uppercase center"></h2>
                 </div>
             </div>
@@ -76,17 +76,19 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-              <p class="testi"><h3 class="section-heading">Chiara e Graziella insieme con NATI PER LA MUSICA</h3></p>
-              <p class="testi">Nati per la Musica promuove l'esperienza musicale in famiglia come strumento di relazione, già durante la gravidanza, per uno sviluppo migliore del bambino nelle prime epoche della vita.</p>
-              <p class="testi">Il Programma è promosso dall'Associazione Culturale Pediatri e dal Centro per la Salute del Bambino ed è attivo su tutto il territorio nazionale grazie alle reti regionali di operatori, che coordinano e promuovono diverse iniziative locali per bambini in età prescolare e le loro famiglie.</p>
-              <p class="testi"><h3 class="section-heading">La musica fa bene</h3></p>
-              <p class="testi">Le ricerche scientifiche dimostrano che le esperienze nei primi anni di vita sono fondamentali per un ottimale sviluppo complessivo delle bambine e dei bambini. La musica è una buona pratica che, se attuata precocemente e con continuità, sostiene la crescita dei bambini.</p>
-              <p class="testi">Dal punto di vista cognitivo, la musica aiuta il bambino a sviluppare proprie capacità di ascolto e osservazione, ad accrescere la propria immaginazione e creatività, ad aumentare le capacità di concentrazione e attenzione e ad esercitare la memoria.</p>
-              <p class="testi">A livello relazionale ascoltare e fare musica in famiglia, giocando con la voce, con gli oggetti quotidiani che producono suoni, cantare filastrocche e inventarne di nuove rafforza il legame affettivo tra adulto e bambino ed è fonte di benessere.</p>
-              <p class="testi"><h3 class="section-heading">Fare musica, insieme</h3></p>
-              <p class="testi">Il ruolo dei genitori è cruciale nel percorso di avvicinamento e scoperta della musica e dei suoni.</p>
-              <p class="testi">Un ambiente familiare musicalmente stimolante, dove i genitori propongono ai bambini di giocare con la voce e con i suoni, rafforza il legame affettivo all’interno della famiglia ed è terreno favorevole nel quale si possono sviluppare le esperienze musicali successive.</p>
-              <p class="testi">I <b>laboratori accreditati</b> da nati per la Musica sono: Ascoltare per crescere, Grembo sonoro e Storie di suoni.</p>
+              <p class="testi"><h3 class="section-heading">PRESENTAZIONE</h3></p>
+              <p class="testi">Incantabimbi é un gruppo di musiciste professioniste, poliedriche, specializzate nell’ educazione musicale della prima infanzia. Il gruppo nasce con l’obiettivo di avvicinare al linguaggio musicale dell’Opera Lirica ma più in generale, alla musica nei suoi differenti generi, stili e modi, attraverso l’elaborazione e la creazione di spettacoli coinvolgenti e interattivi rivolti ai bambini dagli 0 ai 6 anni e alle loro famiglie.
+                Le componenti del gruppo sono cinque e sono musiciste professioniste polistrumentiste, cantanti di diversi stili e generi musicali, specializzate nell’ educazione musicale per la prima infanzia.
+                La peculiarità del gruppo sta nell’elaborare e restituire, secondo le esigenze evolutive dei bambini, un progetto finale duttile ed adattabile al pubblico e agli spazi.<br>
+                Durante il concerto interattivo i bambini ascolteranno differenti possibilità sonore e timbriche degli strumenti musicali, canteranno con le musiciste ed i loro genitori, apprendendo diversi stili, generi e modi musicali.<br>
+                Attraverso la contestualizzazione narrativa il bambino diventa protagonista dello spettacolo, contribuendo attivamente allo svolgimento dell’azione musicale.
+                Il concerto diviene quindi un evento musicale dalla natura multiforme: da performance a momento didattico attraverso l’interazione e la condivisione creativa</p>
+                <br>
+              <p class="testi">Abbiamo progettato creato e messo in scena:<br>
+                &#8220;Il Flauto Magico e…una valigia piena di sogni&#8221; liberamente ispirato alle musiche de il &#8220;Flauto Magico&#8221; W.A. Mozart <br>
+                &#8220;Il mio primo Barbiere&#8221; liberamente ispirato alle musiche dal Barbiere di Siviglia di G. Rossini <br>
+                &#8220;Il mio magico Elisir&#8221; liberamente ispirato alle musiche de &#8220;l'Elisir d’amore&#8221; di G.Donizetti<br>
+                &#8220;DanteBiberon&#8221; ispirato alla Divina Commedia di Dante con musiche tratte dal repertorio classico, jazz e popolare.</p>
             </div>
             <div class="col-md-2"></div>
         </div>
