--- a/tomatisbambini.html
+++ b/tomatisbambini.html
@@ -78,7 +78,12 @@
    <div class="container">
     <div class="row">
      <div class="col-md-2"></div>
-     <div class="col-md-8"><h3 class="section-heading">Dirige le orecchie... il maestro Wolfgang Amadeus Mozart</h3>
+  <!--    <div class="embed-responsive embed-responsive-16by9">
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/uM6kz8jUMDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>  --> 
+     <div class="col-md-8">
+       <h3 class="section-heading">Dirige le orecchie... il maestro Wolfgang Amadeus Mozart</h3>
+      <iframe class="media" src="https://www.youtube.com/embed/uM6kz8jUMDI" allowfullscreen></iframe>
       <p class="testi">Ascoltare non è solo udire ma ricevere un messaggio, elaborarlo, integrarlo e dare una risposta adeguata.</p>
       <p class="testi">Forse non lo sai ma dal nostro ascolto dipende la capacità di attenzione, l’efficacia con cui trattiamo un’informazione, la nostra postura, la voglia di apprendere e di comunicare.</p>
       <p class="testi">La <a href="metodotomatis.html">metodica Tomatis</a> è una tecnica di stimolazione sonora che serve a migliorare la qualità di ricezione dell’orecchio.</p>
